--- a/Module 1/Session 10 - Array/Bai tap - Tu dien.html
+++ b/Module 1/Session 10 - Array/Bai tap - Tu dien.html
@@ -4,24 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dictionary</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <style>
+        body {
+            background-color:rgb(195, 195, 195) ;
+        }
+    </style>
 </head>
 <body>
-    <form action="" class="form-control">
-        <div class="form-control">
-            <label for="input" class="form-label">Search :</label>
-            <input class="form-check-input" type="text" name="input" id="input">
-        </div>
-        <div class="btn-group">
-            <button class="btn btn-primary" id="translate">Translate</button>
-            <label for="translate" class="form-label"></label>
-
-        </div>
-    </form>
+    <div class="container">
+        <legend class="h1">Từ điển</legend>
+        <label class="form-label h4 mb-3">Search</label>
+        <input class="form-control mb-3" type="text" name="input" id="input">            
+        <button class="btn btn-warning mb-3" id="translate">Translate</button>
+        <textarea class="mb-3 form-control" id="display"></textarea>
+    </div>
     <script>
+            let vietWord = ['chuối','cam', 'lê','táo']
+            let engWord = ['banana','orange', 'peach','apple']
+            let inputWord;
+            output = document.getElementById('display');           
+            document.getElementById('translate').addEventListener('click',translate);
 
+            // Dich 
+            function translate(){
+                inputWord = document.getElementById('input').value.toLowerCase();
+                for (let i=0;i<vietWord.length;++i){
+                    if (inputWord===vietWord[i]) {
+                       output.value= engWord[i] ;
+                    }
+                    else if (inputWord===engWord[i]) {
+                       output.value = vietWord[i] ;
+                    }                   
+                }
+                if (output.value===""){
+                     output.value= 'not found';
+                }
+                // output.innerText = 'Not found' ;
+            
+            }
     </script>
 </body>
 </html>
