--- a/Module 1/Case study/Task 7 - Tao giao dien.html
+++ b/Module 1/Case study/Task 7 - Tao giao dien.html
@@ -79,7 +79,7 @@
         height: 500px;
         vertical-align: top;
         width: 30%;  
-        background-color: lightgrey;
+        border-right: 2px gray solid;
       }
     </style>
     <div class="container-fluid">
